fix: apply rich text editor styling and resolve content overflow issues (#103221)     - Add RichTextViewer to Forum threadbody     - Add RichTextViewer to Ticketing ticketdetails     - Update form grid layout styles

--- a/ui/components/rich-text-editor/rich-text-editor.css
+++ b/ui/components/rich-text-editor/rich-text-editor.css
@@ -88,6 +88,6 @@
   }
 }
 .rdw-editor-wrapper {
-  word-break: 'break-word';
-  overflow-wrap: 'break-word';
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
